--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		</div>
 		<div class="two">
 			<div class="two-1">
-				<a href="document.html">Документы</a>
 				<a href="about.html">О нас</a>
 				<a href="services.html">Услуги</a>
 				<a href="activity.html">Мероприятия</a>
+				<a href="blog.html">Блог</a>
 				<a href="vacancies.html">Вакансии</a>
 				<a href="faq.html">Часто задаваемые вопросы</a>
 				<a href="intelligence.html">Сведения об образовательной организации</a>
