--- a/about.html
+++ b/about.html
@@ -36,7 +36,12 @@
 		</div>
 	</header>
 	<content>
-		
+		<div class="content">
+			<div class="title">
+				<h1>О нас</h1>
+			</div>
+			
+		</div>
 	</content>
 	<div class="one">
 		<hr class="width">
