--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/desktop/about.css">
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
@@ -40,7 +41,24 @@
 			<div class="title">
 				<h1>О нас</h1>
 			</div>
-			
+			<div class="about">
+				<h2>Общая информация</h2>
+				<h2>Контакты</h2>
+				<h2>Противодействие коррупции</h2>
+				<h2>Противодействие терроризму и экстремизму</h2>
+			</div>
+			<div class="about-1">
+				<h1>Московский городской центр условий и охраны труда</h1>
+				<br>
+				<p>Функции и полномочия учредителя Государственного бюджетного учреждения города Москвы "Московский городской центр условий и охраны труда" осуществляет Департамент труда и социальной защиты населения города Москвы.</p>
+				<br>
+				<p></p>
+				<br>
+				<p></p>
+				<br>
+				<p></p>
+				<br>
+			</div>
 		</div>
 	</content>
 	<div class="one">
