--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 		<div class="three">
 			<div class="item">
 				<div class="item-1">
-					<div></div>
 					<div class="news">
 						<h1>Блог</h1>
 						<br>
@@ -54,7 +53,9 @@
 						<br>
 						<hr>
 						<br>
-						<p class="news-1">Все новости ></p>
+						<a class="news-1" href="blog.html">
+							<p>Все новости ></p>
+						</a>
 					</div>				
 				</div>
 				<div class="services">
@@ -76,6 +77,45 @@
 						</div>
 					</div>
 					<br>
+				</div>
+				<div class="trust">
+					<h1>Нам доверяют</h1>
+				</div>
+				<div class="partners">
+					<h1>Наши партнёры</h1>
+					<div class="partners-1">
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+						<a href="index.html">
+							<img src="assets/img/logo.jpg" alt="logo">
+						</a>
+					</div>
+				
 				</div>
 			</div>
 		</div>
@@ -105,7 +145,7 @@
 			</div>
 		</div>
 		<div class="tm">
-			<h2>Московский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
+			<h2>&copyМосковский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
 		</div>
 	</footer>
 </body>
