--- a/about.html
+++ b/about.html
@@ -52,12 +52,42 @@
 				<br>
 				<p>Функции и полномочия учредителя Государственного бюджетного учреждения города Москвы "Московский городской центр условий и охраны труда" осуществляет Департамент труда и социальной защиты населения города Москвы.</p>
 				<br>
-				<p></p>
+				<p>"Московский городской центр условий и охраны труда" создан для выполнения работ и оказания услуг в сфере охраны труда, и является первой и единственной государственной организацией рабатающей в данном направлении в городе Москве.</p>
 				<br>
-				<p></p>
+				<p>Более 22 лет ведётся активная работа с работодателями и специалистами по охране труда в решении задач по улучшению условий и охране труда. Наша задача - сбережение потенциала трудовых ресурсов, снижение производственного травматизма экономических потерь работодателей, а также повышение производительности и комфортности труда.</p>
 				<br>
-				<p></p>
+				<p>Сформировшийся профессиональный коллектив Московского городского центра условий и охраны труда оказывает следующие услуги в области охраны труда в соответствии с законодательством РФ и действующими стандартами:</p>
 				<br>
+				<p><b>Услуги для специалистов в области охраны труда</b></p>
+				<br>
+				<ul>
+					<li>обучение и проверка знаний по охране труда;</li>
+					<br>
+					<li>обучение членов комиссии по проведению СОУТ;</li>
+					<br>
+					<li>повышение квалификации специалистов по ОТ;</li>
+				</ul>
+				<br>
+				<a href="#"><p>Подробнее</p></a><br>
+				<p><b>Услуги для организаций и частных компаний</b></p>
+				<br>
+				<ul>
+					<li>комплекс работ по оценке условий труда;</li>
+					<br>
+					<li>инструментальные измерения факторов производственной среды;</li>
+					<br>
+					<li>подготовка перечней рабочих мест для проведения СОУТ;</li>
+					<br>
+					<li>аудит условий труда;</li>
+					<br>
+					<li>аутсорсинг функций по охране труда;</li>
+					<br>
+					<li>разработка документации по охране труда;</li>
+					<br>
+					<li>организация и проведение мероприятий и конкурсов;</li>
+				</ul>
+				<br>
+				<a href="#"><p>Подробнее</p></a>
 			</div>
 		</div>
 	</content>
