--- a/about.html
+++ b/about.html
@@ -87,7 +87,50 @@
 					<li>организация и проведение мероприятий и конкурсов;</li>
 				</ul>
 				<br>
-				<a href="#"><p>Подробнее</p></a>
+				<a href="#"><p>Подробнее</p></a><br>
+				<p><b>Положительное для граждан</b></p>
+				<br>
+				<ul>
+					<li>Повышение грамотности в трудовой сфере и трудовом законодательстве;</li>
+					<br>
+					<li>Получение знаний и навыков способных сохранить жизнь и здоровье;</li>
+					<br>
+					<li>Возможность взглянуть на трудовые процесы с новой точки зрения;</li>
+					<br>
+					<li>Любой гражданин может получить консультацию по всему перечню предоставляемых услуг.</li>
+					<br>
+					<li>Кроме того, Центр оказывает консультационную помощьработодателям и работникам организаций всех форм собственности и ведомственной принадлежности, специалистам по охране труда и гражданам.</li>
+					<br><br>
+					<p>Что предусмотреть при устройстве на новую работу?Как должно быть организованно рабочее пространство? Какие льготы положены, если есть вредные условия труда? Чтоделать, если получена травма на производстве? какие средства индивидуальной защиты использовать? Порядок проведения медицинских осмотров. Для чего проводится социальная оценка условий труда? Теперь ответы на эти идругие вопросы любой желающий может получить у специалистов <a href="#">в центрах госулуг "Мои документы"</a></p><br>
+					<a href="#"><p>Информационная справка по административно-управленческому персоналу за 2020 год</p></a><br><br>
+					<h1>Основные реквизиты организации</h1><br><br>
+					<p><b>Наименование организации (полное): </b>Государственное бюджетное учреждение города Москвы "Московский городской центр условий и охраны труда"</p><br>
+					<p><b>Наименование организации (краткое): </b>ГБУ МГЦУОТ</p><br>
+					<p><b>Адрес: </b>119049, г. Москва, ул. Коровий вал, д. 63, стр. 5</p><br>
+					<p><b>ИНН/КПП: </b>7737077872/770501001</p><br>
+					<p><b>Код ИФНС: </b>7705</p><br>
+					<p><b>ОГРН: </b>1027739902850</p><br>
+					<p><b>ОКАТО: </b>45286560000</p><br>
+					<p><b>ОКТМО: </b>45376000</p><br>
+					<p><b>ОКПО: </b>46476914</p><br>
+					<p><b>ОКВЭД (основной): </b>71.20</p><br>
+					<p><b>Реквизиты лицевого счёта бюджетного учреждения:</b></p><br>
+					<p>л/с № 2614841000450714, открытый в Департаменте финансов города Москвы</p><br>
+					<p>Р/счет № 03224643450000007300</p><br>
+					<p>ЕКС № 40102810545370000003</p><br>
+					<p>ЕКС № 40102810545370000003</p><br>
+					<p>БИК 004525988</p><br>
+					<p><b>Реквизиты лицевого счета бюджетного учреждения для учета операций со средствами, поступающими во временное распоряжение:</b></p><br>
+					<p>л/с № 2114841000450714, открытый в Департаменте финансов города Москвы</p><br>
+					<p>Р/счет № 03224643450000007300</p><br>
+					<p>ЕКС № 40102810545370000003</p><br>
+					<p>в ГУ Банка России по ЦФО//УФК по г. Москве г. Москва</p><br>
+					<p>БИК 004525988</p><br>
+					<p><b>Директор: </b>Овчинников Юрий Станиславовия</p><br>
+					<a href="#" target="blank"><p>Основные реквизиты организации</p></a><br><br>
+					<h1>Файлы для скачивания</h1><br>
+					<a href="http://mcot.ru/assets/files/ob-uchrejdenii-gbu-mgcuot/2021-rezultaty-sout-v-gbu-mgcugot-svodnaya-vedomost-rezultatov.pdf" target="blank"><p>Сводная ведомость результатов проведения специальной оценки условий труда в ГБУ МГЦУОТ 28.04.2021</p></a><br><br>
+					<a href="http://mcot.ru/assets/files/ob-uchrejdenii-gbu-mgcuot/2018-rezultaty-sout-v-gbu-mgcugot-svodnaya-vedomost-rezultatov.pdf" target="blank"><p>Сводная ведомость результатов проведения специальной оценки условий труда в ГБУ МГЦУОТ 10.12.2018</p></a><br><br><br><br>
 			</div>
 		</div>
 	</content>
