--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 					<p>л/с № 2614841000450714, открытый в Департаменте финансов города Москвы</p><br>
 					<p>Р/счет № 03224643450000007300</p><br>
 					<p>ЕКС № 40102810545370000003</p><br>
-					<p>ЕКС № 40102810545370000003</p><br>
+					<p>в ГУ Банка России по ЦФО//УФК по г. Москве г. Москва</p><br>
 					<p>БИК 004525988</p><br>
 					<p><b>Реквизиты лицевого счета бюджетного учреждения для учета операций со средствами, поступающими во временное распоряжение:</b></p><br>
 					<p>л/с № 2114841000450714, открытый в Департаменте финансов города Москвы</p><br>
