--- a/intelligence.html
+++ b/intelligence.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/desktop/intelligence.css">
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
@@ -22,10 +23,10 @@
 		</div>
 		<div class="two">
 			<div class="two-1">
-				<a href="document.html">Документы</a>
 				<a href="about.html">О нас</a>
 				<a href="services.html">Услуги</a>
 				<a href="activity.html">Мероприятия</a>
+				<a href="blog.html">Блог</a>
 				<a href="vacancies.html">Вакансии</a>
 				<a href="faq.html">Часто задаваемые вопросы</a>
 				<a href="intelligence.html">Сведения об образовательной организации</a>
@@ -33,7 +34,45 @@
 		</div>
 	</header>
 	<content>
-		
+		<div class="intelligence">
+			<div class="intelligence-1">
+				<h1>Сведения об образовательной организации</h1>
+				<br><br>
+				<h2 class="title">Основные сведения</h2><br>
+				<p>Государственное бюджетное учреждение города Москвы «Московский городской центр условий и охраны труда» (ГБУ МГЦУОТ)</p><br>
+				<p><b>Дата создания: </b>создано Комитетом труда и занятости Правительства Москвы на основании приказа Комитета труда и занятости Правительства Москвы от 7 апреля 1997 г. №121 «Об утверждении Московского городского Центра условий и охраны труда».</p><br>
+				<p><b>Учредитель: </b>Департамент труда и социальной защиты населения города Москвы.</p><br>
+				<p><b>Юридический адрес: </b>119049, г. Москва, ул. Коровий Вал, д. 3, стр. 5.</p><br>
+				<p><b>График работы:</b></p><br>
+				<p>Пн - Чт 8.00 - 17.00</p>
+				<p>Пт 8.00 - 15.45</p>
+				<p>Сб - Вс Выходные дни</p><br>
+				<p><b>Контактные телефоны: </b><a href="tel:+7 499 237-02-19; >+7 495 959-88-35">+7 499 237-02-19; +7 495 959-88-35</a></p><br>
+				<p><b>Адрес электронной почты (E-mail): </b><a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+				<p><b>Официальный сайт: </b><a href="http://mcot.ru/">mcot.ru</a></p><br><br><br>
+				<h1>Структура и органы управления образовательной организацией</h1><br>
+				<h2 class="title">Руководство</h2><br>
+				<hr><br>
+				<div class="intelligence-2">
+					<div class="intelligence-3">
+						<p><b>Директор: </b>Овчинников Юрий Станиславович</p><br>
+					    <p>Тел: <a href="tel:+7 499 237-02-19">+7 499 237-02-19</a></p>
+					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+					</div>
+					<div class="intelligence-3">
+						<p><b>Заместитель директора: </b>Шмакова Ксения Николаевна</p><br>
+					    <p>Тел: <a href="tel:+7 499 237-02-19">+7 499 237-02-19</a></p>
+					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+					</div>
+					<div class="intelligence-3">
+						<p><b>Заместитель директора: </b>Жаденов Денис Васильевич</p><br>
+					    <p>Тел: <a href="tel:+7 499 237-02-19">+7 499 237-02-19</a></p>
+					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+					</div>
+				</div>
+				<h1>Контактная информация</h1><br><hr><br>
+			</div>
+		</div>
 	</content>
 	<div class="one">
 		<hr class="width">
