--- a/intelligence.html
+++ b/intelligence.html
@@ -47,12 +47,11 @@
 				<p>Пн - Чт 8.00 - 17.00</p>
 				<p>Пт 8.00 - 15.45</p>
 				<p>Сб - Вс Выходные дни</p><br>
-				<p><b>Контактные телефоны: </b><a href="tel:+7 499 237-02-19; >+7 495 959-88-35">+7 499 237-02-19; +7 495 959-88-35</a></p><br>
+				<p><b>Контактные телефоны: </b><a href="tel:+7 499 237-02-19;">+7 499 237-02-19; </a><a href="tel:+7 495 959-88-35">+7 495 959-88-35</a></p><br>
 				<p><b>Адрес электронной почты (E-mail): </b><a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
 				<p><b>Официальный сайт: </b><a href="http://mcot.ru/">mcot.ru</a></p><br><br><br>
 				<h1>Структура и органы управления образовательной организацией</h1><br>
-				<h2 class="title">Руководство</h2><br>
-				<hr><br>
+				<h2 class="title">Руководство</h2><br><br>
 				<div class="intelligence-2">
 					<div class="intelligence-3">
 						<p><b>Директор: </b>Овчинников Юрий Станиславович</p><br>
@@ -70,7 +69,70 @@
 					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
 					</div>
 				</div>
-				<h1>Контактная информация</h1><br><hr><br>
+				<h2 class="title">Контактная информация</h2><br><br>
+				<p>Адрес: г. Москва, ул. Коровий Вал, д. 3, стр. 5</p><br>
+				<p>Тел.: <a href="tel:+7 499 237-02-19;">+7 499 237-02-19</a></p><br>
+				<p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+				<h2 class="title">Структурные подразделения</h2><br><br>
+				<p><b>Отдел обучения и развития</b></p><br>
+				<p><b>Миронова Ирина Вячеславовна </b>- заместитель начальника отдела</p><br>
+				<p>тел.: <a href="tel:+7 499 959-88-35;">+7 499 959-88-35</a></p><br>
+				<p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+				<p><b>Данчикова Татьяна Юрьевна </b>- инженер</p><br>
+				<p>тел.: <a href="tel:+7 499 959-88-35;">+7 499 959-88-35</a></p><br>
+			    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br><br>
+			    <h2 class="title">Документы</h2><br><br>
+				<div class="document">
+					<a href="http://mcot.ru/assets/files/obrazovanie/ustav-prikaz-675-ot-01.06.2021.pdf" target="blank"><p>Устав ГБУ МГЦУОТ;</p></a><br><br>
+					<a href="http://mcot.ru/assets/files/obrazovanie/mcotru5-licenziya-na-osushhestvlenie-obrazovatelnoj-deyatelnosti-gbu-mgcuot-2021_web.pdf" target="blank"><p>Лицензия на право ведения образовательной деятельности;</p></a><br><br>
+					<a href="http://mcot.ru/assets/files/obrazovanie/uvedomlenie-o-vnesenii-v-reestr-akkreditovannyh-organizacij-okazyvayushhih-uslugi-v-oblasti-ohrany-truda.PDF" target="blank"><p>Уведомление о внесении в реестр аккредитованных организаций, оказывающих услуги в области охраны труда (обучение работодателей и работников вопросам охраны труда);</p></a><br><br>
+					<a href="http://mcot.ru/assets/files/svedeniya-ob-obrazovatelnoj-organizacii/2021/otchet-o-rezultatah-samoobsledovaniya-za-2020-g.tif" target="blank"><p>Отчет о результатах самообследования</p></a><br><br>
+					<a href="http://mcot.ru/assets/files/svedeniya-ob-obrazovatelnoj-organizacii/2021/pravila-vnutrennego-trudovogo-rasporyadka.pdf" target="blank"><p>Правила внутреннего трудового распорядка</p></a><br><br>
+					<a href="http://mcot.ru/svedeniya-ob-obrazovatelnoj-organizacii-gbu-mgcuot/rezultaty-proverok.html" target="blank"><p>Сведения о результатах проверок</p></a><br><br>
+					<a href="http://mcot.ru/svedeniya-ob-obrazovatelnoj-organizacii-gbu-mgcuot/lokalnye-normativnye-dokumenty.html" target="blank"><p>Локальные нормативные документы</p></a><br><br>
+					<a href="http://mcot.ru/svedeniya-ob-obrazovatelnoj-organizacii-gbu-mgcuot/rezhim-zanyatij-obuchayushhihsya.html" target="blank"><p>Режим занятий обучающихся</p></a><br><br>
+				</div>
+				<h2 class="title">Образование</h2><br>
+				<p>Обучение проводится в следующих формах: очное, очно-зфаочноею</p><br>
+				<p>Срок обучения определяется учебной программой.</p><br>
+				<p>Обучение ведётся на русском языке.</p><br><br>
+				<div class="document">
+					<a href="http://mcot.ru/assets/files/svedeniya-ob-obrazovatelnoj-organizacii/2021/programma-18.10.2021.PDF" target="blank"><p>Программа обучения по охране труда, 40 часов</p></a><br><br>
+				    <a href="http://mcot.ru/assets/files/svedeniya-ob-obrazovatelnoj-organizacii/2021/uchebnye-plany-obucheniya-po-ohrane-truda-dlya-rukovoditelej-i-specialistov-po-programme-40-chasov.pdf" target="blank"><p>Учебный план обучения по охране труда, 40 часов</p></a><br><br>
+			    	<a href="http://mcot.ru/assets/files/svedeniya-ob-obrazovatelnoj-organizacii/2021/grafik-obucheniya-na-oktyabr-2021g.PDF" target="blank"><p>График проведения обучения в октябре 2021 года</p></a><br><br>
+			    	<a href="http://mcot.ru/assets/files/svedeniya-ob-obrazovatelnoj-organizacii/2021/svodnaya-tablichka-obuchennyh-na-01.10.2021.pdf" target="blank"><p>Информация о численности слушателей</p></a><br><br>
+				    <a href="http://mcot.ru/svedeniya-ob-obrazovatelnoj-organizacii-gbu-mgcuot/distancionnoe-obuchenie.htmls" target="blank"><p>Дистанционное обучение</p></a><br><br>
+				</div>
+				<h2 class="title">Образование</h2><br>
+				<p>Обучение проводят преподователи, привлечённые на основании гражданско-правовых договоров на оказание преподавательских услугфизическим лицом, по программам обучения работодателей и работников вопросам охраны труда.</p><br>
+				<div class="intelligence-2">
+					<div class="intelligence-3">
+						<p><b>Директор: </b>Овчинников Юрий Станиславович</p><br>
+					    <p>Тел: <a href="tel:+7 499 237-02-19">+7 499 237-02-19</a></p>
+					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+					</div>
+					<div class="intelligence-3">
+						<p><b>Заместитель директора: </b>Шмакова Ксения Николаевна</p><br>
+					    <p>Тел: <a href="tel:+7 499 237-02-19">+7 499 237-02-19</a></p>
+					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+					</div>
+					<div class="intelligence-3">
+						<p><b>Заместитель директора: </b>Жаденов Денис Васильевич</p><br>
+					    <p>Тел: <a href="tel:+7 499 237-02-19">+7 499 237-02-19</a></p>
+					    <p>E-mail: <a href="mailto:mcot@social.mos.ru">MCOT@social.mos.ru</a></p><br>
+					</div>
+				</div>
+				<h2 class="title">Материально-техническое обеспечение и оснащенность образовательного процесса</h2><br>
+				<p>Кабинеты теоретического обучения на 40 мест</p><br>
+				<p>Единовременное обучение до 40 человек</p><br>
+				<p>Ежегодное обучение до 1000 человек</p><br><br>
+				<p>Оснащённость: Помещение имеет необходимое оборудование для проведения выступлений (занятий) с аудио-, видео- и графическим сопровождением.</p><br><br>
+				<p>Каждый обучающийся обеспечивается рабочим местом</p><br><br>
+				<h2 class="title">Платные образовательные услуги</h2><br>
+				<div class="">
+					<p><a href="#">Обучение и проверка знаний по охране труда</a></p><br>
+				</div>
+				
 			</div>
 		</div>
 	</content>
