--- a/intelligence.html
+++ b/intelligence.html
@@ -132,7 +132,24 @@
 				<div class="">
 					<p><a href="#">Обучение и проверка знаний по охране труда</a></p><br>
 				</div>
-				
+				<h2 class="title">Финансово-хозяйственная деятельность</h2><br>
+				<p>ГБУ МГЦУОТ осуществляет организацию и проведение обучения в рамках выполнения объёмов, утверждённых государственных услуг (Приказ от 21.12.2020 №1508 Департамента труда и социальной защиты населения города Москвы "Об утверждении объёмов государственных услуг (работ) государственным учреждением города Москвы, подведомственным Департаменту труда и социальной защиты населения города Москвы, на 2021 год")</p><br>
+				<h2 class="title">Вакантные места для приёма (перевода) обучающихся</h2><br>
+				<p>Отсутствуют.</p><br>
+				<h2 class="title">Доступная среда</h2><br>
+				<p>Здание ГБУ МГЦУОТ оборудовано для беспрепятственного доступа лиц с ограниченными возможностями здоровья наличием приспособленной входной группы (пандусы и другие устройства и приспособления). В помещениях имеется специально оборудованные санитарно-гигиенических помещения для ЛОВЗ (перила, поручни, специализированное сантехническое оборудование и т.д.).</p><br>
+				<p>В случае необходимости проводятся консультации инвалидов и их представителей по вопросам обучения.</p><br>
+				<p>Имеется доступ  к электронным фондам учебно-методической документации, который осуществляется с использованием дистанционных образовательных технологий.</p><br>
+				<h2 class="title">Международное сотрудничество</h2><br>
+				<p>Не проводится.</p><br>
+				<h2 class="title">Образовательные стандарты</h2><br>
+				<p>Программы обучения разрабатываются с учетом установленных квалификационных требований, профессиональных стандартов и требований соответствующих федеральных государственных образовательных стандартов среднего профессионального и (или) высшего образования к результатам освоения образовательных программ.</p><br>
+				<p>Программа профессиональной переподготовки «Специалист по охране труда».</p><br>
+				<div class="">
+					<p><a href="https://fgos.ru/" target="blank">ОФедеральный государственный образовательный стандарт</a></p><br>
+				</div>
+				<h2 class="title">Стипендии и меры поддержки обучающихся</h2><br>
+				<p>Отсутствуют.</p><br>
 			</div>
 		</div>
 	</content>
