--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/desktop/services.css">
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
@@ -22,10 +23,10 @@
 		</div>
 		<div class="two">
 			<div class="two-1">
-				<a href="document.html">Документы</a>
 				<a href="about.html">О нас</a>
 				<a href="services.html">Услуги</a>
 				<a href="activity.html">Мероприятия</a>
+				<a href="blog.html">Блог</a>
 				<a href="vacancies.html">Вакансии</a>
 				<a href="faq.html">Часто задаваемые вопросы</a>
 				<a href="intelligence.html">Сведения об образовательной организации</a>
@@ -33,7 +34,182 @@
 		</div>
 	</header>
 	<content>
-		
+		<div class="services">
+			<div class="services-2">
+				<h1>Услуги для организаций</h1><br><br>
+				<div class="border">
+					<h2 class="title">Обучение и проверка знаний по охране труда</h2><br>
+				    <p>Приобретение необходимых компетенций в области охраны труда руководителями и специалистами организаций города всех форм собственности, форма обучения - заочная</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>2900Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>40 часов</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Комплекс работ по оценке условий труда</h2><br>
+				    <p>Комплекс мероприятий по организации и проведению спецмальной оценки условий с идентификацией вредных и опасных факторов производственной среды и трудового процесса и оценке уровня их воздействия на работника, определение классов условий труда, напрвление данных в ФГИС СОУТ.</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>1300Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>от 30 дней</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Инструментальные измерения факторов производственной среды</h2><br>
+				    <p>Контроль за соблюдением установленных санитарных правил и выполнением санитарно-противоэпидемических мероприятий.</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>800Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>от 5 дней</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Подготовка перечней рабочих мест для проведения СОУТ</h2><br>
+				    <p>Подсчёт количества рабочих мест, подлежащих специальной оценке условий труда в организации, с учётом аналогичности</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>1000Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>от 5 дней</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Аудит условий труда</h2><br>
+				    <p>Анализ функционирования системы охраны труда в организации, включая оценку организации работ и проверку документации по охране труда.</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>от 8000Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>индивидуально</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Организация и проведение мероприятий</h2><br>
+				    <p>Подготовка и проведение семинаров и круглых столов по наиболее актуальным вопросам охраны труда с видеосопровождением, выдачей раздаточного материала по теме мероприятия, получением сертификатов об участии.</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>от 35 000Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>по заявкам</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Организация и проведение конкурсов</h2><br>
+				    <p>Подготовка и проведение конкурсов по охране труда по профессии "Специалист по охране труда" в рамках проведения конкурса профессионального мастерства "Московские мастера".</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>от 100 000Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>по заявкам (ОИВ)</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Аутсоринг функций по охране труда</h2><br>
+				    <p>Профессиональное сопровождение по охране труда деятельности организаций со штатной численностью менее 50 человек.</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>от 10 000Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>договор на год</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+				<br><br>
+				<div class="border">
+					<h2 class="title">Разработка документациипо охране труда</h2><br>
+				    <p>Подгоотовка полного пакета локальных нормативных актов и документов по охране труда, разработанного специально для Вашей организации с учётом специфики вашей деятельности.</p><br>
+				    <div class="string">
+				    	<div class="column-1">
+				    		<p><b>Стоимость</b></p>
+				    	    <p>от 20 000Р</p>
+				    	</div>
+				    	<div class="column-2">
+				    		<p><b>Сроки</b></p>
+				    	    <p>от 30 дней</p>
+				    	</div>
+				    	<div class="column-3">
+				    		<p><b>Оферта на портале поставщиков</b></p>
+				    	    <p>№192948561810298</p>
+				    	</div>
+				    </div>
+				</div>
+			</div>
+		</div>
+		<br><br><br><br>
 	</content>
 	<div class="one">
 		<hr class="width">
