--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 					<img src="assets/img/logo.jpg" alt="logo">
 				</a>
 				<input class="search" type="text" name="search">
-				<a href="#">Версия для слабовидящих</a>
+				<div class="two">
+					<a href="#">Версия для слабовидящих</a>
+				</div>
 				<a class="phone" href="tel:+7(999)-222-33-44">+7(999)-222-33-44</a>
 			</div>
 		</div>
@@ -37,6 +39,9 @@
 		<div class="three">
 			<div class="item">
 				<div class="item-1">
+					<div class="fasad">
+						<img src="assets/img/1_banner.svg">
+					</div>
 					<div class="news">
 						<h1>Блог</h1>
 						<br>
@@ -81,39 +86,73 @@
 				</div>
 				<div class="trust">
 					<h1>Нам доверяют</h1>
+					<div class="item-1">
+					<div class="fasad">
+						<img class="img-1" src="assets/img/face.jpg">
+					</div>
+					<div class="news trust-1">
+						<h1>Департамент здравоохранения города Москвы</h1>
+						<p><b>Заместитель руководителя</b></p>
+						<p><b>А. Н. Сапсай</b></p><hr>
+						<p>Руководство Департамента здравоохранения города Москвы выражает благодарность подведомственному учреждению Департамента труда и социальной защиты населения города Москвы - ГБУ города Москвы "Московский городской центр условий и охраны труда" за подготовку и проведение выездного обучающего семинара по охране труда на базе Региональной общественной организации Профессиональный союз работников здравоохранения города Москвы...</p>
+						<a class="trust-2" href="blog.html">
+							<p>Читать полностью</p>
+						</a>
+					</div>				
+				</div>
+				<div class="services">
+					<h1>Услуги</h1>
+					<br>
+					<div class="services_item">
+						<div class="services-1">
+							<h2>Обучение и проверка знаний по охране труда</h2>
+							<p class="services-3">Приобретение необходимых компетенций в области охраны труда руководителями и специалистами организаций города всех форм собственности.</p>
+						</div>
+						<div class="services-1">
+							<h2>Обучение и проверка знаний по охране труда</h2>
+							<p class="services-3">Приобретение необходимых компетенций в области охраны труда руководителями и специалистами организаций города всех форм собственности.</p>
+						</div>
+						<div class="services-1">
+							<h2>Обучение и проверка знаний по охране труда</h2>
+							<p class="services-3">Приобретение необходимых компетенций в области охраны труда руководителями и специалистами организаций города всех форм собственности.</p>
+							<br>
+						</div>
+					</div>
+					<br>
+				</div>
 				</div>
 				<div class="partners">
 					<h1>Наши партнёры</h1>
 					<div class="partners-1">
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://rosmintrud.ru/" target="blank">
+							<img class="img" src="assets/img/ministerstvo-truda-i-socialnoj-zashhity-rossijskoj-federacii-mintrud-rf-238x238.jpg" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://www.rostrud.ru/" target="blank">
+							<img class="img" src="assets/img/rostrud-federalnaya-sluzhba-po-trudu-i-zanyatosti-238x238-v2.jpg" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://mycareer.moscow/" target="blank">
+							<img class="img" src="assets/img/moya-karera-238h238.jpg" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://dszn.ru/" target="blank">
+							<img class="img" src="assets/img/departament-truda-i-socialnoj-zashhity-naseleniya-goroda-moskvy-dtszn-238x238.jpg" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://ya-doma.ru/" target="blank">
+							<img class="img" src="assets/img/238x238_ya-doma_ru_2020-04-08_aak.jpg" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://ag.mos.ru/" target="blank">
+							<img class="img" src="assets/img/mosru.png" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://gorod.mos.ru/" target="blank">
+							<img class="img" src="assets/img/gorod.png" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="https://dszn.ru/dolgoletie" target="blank">
+							<img class="img" src="assets/img/moskovskoe-dolgoletie-238x238.png" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="http://mos.ru/" target="blank">
+							<img class="img" src="assets/img/mos.png" alt="logo">
 						</a>
-						<a href="index.html">
-							<img src="assets/img/logo.jpg" alt="logo">
+						<a href="http://www.eduprof.ru/" target="blank">
+							<img class="img" src="assets/img/uchebnyj-centr-professional-238x238.png" alt="logo">
 						</a>
 					</div>
 				
