--- a/faq.html
+++ b/faq.html
@@ -50,9 +50,17 @@
 		<div class="faq">
 			<div class="faq-1">
 				<h1>Часто задаваемые вопросы</h1>
-				<br><hr>
+				<br><br><br>
+				<div class="faq-3">
+					<div class="faq-4">
+						<a href="#">Мед. осмотры</a>
+						<a href="#">Обучение и инструктаж по охране труда</a>
+						<a href="#">Организация работ по охране труда</a>
+						<a href="#">Специальная оценка условий труда</a>
+					</div>
+				</div><br><br>
 				<div id="accordion">
-					<h2 class="title">Какие существуют виды медицинских осмотров?</h2>
+					<h2 class="title"><hr>Какие существуют виды медицинских осмотров?</h2>
 					<div class="faq-2">
 						<p>Обязательные медицинские осмотры могут быть предварительными (при поступлении на работу), периодическими (в течение трудовой деятельности), внеочередными (по медицинским показаниям), постоянными (каждый рабочий день/смену) (Приказ Минздравсоцразвития России от 12.04.2011 N 302н).</p>
 					</div>
