--- a/about.html
+++ b/about.html
@@ -42,13 +42,15 @@
 		<div class="content">
 			<div class="title">
 				<h1>О нас</h1>
-			</div>
-			<div class="about">
-				<h2>Общая информация</h2>
-				<h2>Контакты</h2>
-				<h2>Противодействие коррупции</h2>
-				<h2>Противодействие терроризму и экстремизму</h2>
-			</div>
+			</div><br><br>
+			<div class="about-2">
+				<div class="about-3">
+					<a href="#">Общая информация</a>
+					<a href="#">Контакты</a>
+					<a href="#">Противодействие коррупции</a>
+					<a href="#">Противодействие терроризму и экстремизму</a>
+				</div>
+			</div><br><br>
 			<div class="about-1">
 				<h1>Московский городской центр условий и охраны труда</h1>
 				<br>
