--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 				<div class="trust">
 					<h1>Нам доверяют</h1>
 					<div class="item-1">
-					<div class="fasad">
-						<img class="img-1" src="assets/img/face.jpg">
-					</div>
+						<div class="fasad-1">
+							<img class="img-1" src="assets/img/face.jpg">
+						</div>
 					<div class="news trust-1">
 						<h1>Департамент здравоохранения города Москвы</h1>
 						<p><b>Заместитель руководителя</b></p>
